# metronome

./: Cargo.toml  README.md
src/: backend.rs  block.rs  main.rs  page.rs
src/page/: finalpage.rs  secondpage.rs  startpage.rs
