[package]
name = "metronome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.9.0",features = ["tokio"]}
iced_native = "0.10.3"
tokio = { version = "1.28", features = ["full"] }
iced_futures = "0.6.0"
rodio = "0.17.1"
